ashu/ashu-java-spark/eks-manifest/sparkmanifest/sparkmaster-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashu-spark-master
  name: spark-master-lb
  namespace: common
spec:
  ports:
  - port: 7077
    name: backend 
    protocol: TCP
    targetPort: 7077
  selector:
    app: ashu-spark-master
  type: ClusterIP
status:
  loadBalancer: {}
