ashu/ashu-java-spark/eks-manifest/sparkmanifest/svcui.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashu-spark-master
  name: lb1
  namespace: common
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ashu-spark-master
status:
  loadBalancer: {}
